# emotional-detection

./: .gitignore  README.md  emotional-detection.yml  pyproject.toml
emotional_detection/: EMOTIONAL_PIPE  main.py
tests/: test_emotional_detection.py
